Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138678

Crash in QTextEdit while inserting a column into a HTML table

XMLWordPrintable

    • 68a5ec23f (dev), c314adf8f (6.10), d536a4a1c (6.9), 2070e5509 (tqtc/lts-6.8), 051f0fb86 (tqtc/lts-6.5), 5aecefc6a (dev), 720e9f1b8 (tqtc/lts-6.8), e3babfda4 (6.10), df514f006 (tqtc/lts-6.5)

      I found a crash which happens while interacting with a QTextEdit that contains a HTML table.

      Attached is a minimal reproducing example app.

      Steps to reproduce:

      • Click in the table on the cell containing "Name"
      • Click "Insert column before"
      • nullptr crash
      Qt6Gui.dll!QTextLayout::position() Line 860	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutBlock(const QTextBlock & bl, int blockPosition, const QTextBlockFormat & blockFormat, QTextLayoutStruct * layoutStruct, int layoutFrom, int layoutTo, const QTextBlockFormat * previousBlockFormat) Line 3443	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFlow(QTextFrame::iterator it, QTextLayoutStruct * layoutStruct, int layoutFrom, int layoutTo, QFixed width) Line 3283	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutCell(QTextTable * t, const QTextTableCell & cell, QFixed width, int layoutFrom, int layoutTo, QTextTableData * td, QFixed absoluteTableY, bool withPageBreaks) Line 2315	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutTable(QTextTable * table, int layoutFrom, int layoutTo, QFixed parentY) Line 2481	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFrame(QTextFrame * f, int layoutFrom, int layoutTo, QFixed frameWidth, QFixed frameHeight, QFixed parentY) Line 2984	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFrame(QTextFrame * f, int layoutFrom, int layoutTo, QFixed parentY) Line 2910	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFlow(QTextFrame::iterator it, QTextLayoutStruct * layoutStruct, int layoutFrom, int layoutTo, QFixed width) Line 3190	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFrame(QTextFrame * f, int layoutFrom, int layoutTo, QFixed frameWidth, QFixed frameHeight, QFixed parentY) Line 3023	C++
      Qt6Gui.dll!QTextDocumentLayoutPrivate::layoutFrame(QTextFrame * f, int layoutFrom, int layoutTo, QFixed parentY) Line 2910	C++
      Qt6Gui.dll!QTextDocumentLayout::doLayout(int from, int oldLength, int length) Line 3829	C++
      Qt6Gui.dll!QTextDocumentLayout::documentChanged(int from, int oldLength, int length) Line 3792	C++
      Qt6Gui.dll!QTextDocumentPrivate::finishEdit() Line 1195	C++
      Qt6Gui.dll!QTextTable::insertColumns(int pos, int num) Line 795	C++
      
      

        1. example app.png
          10 kB
          Freddy Herzog
        2. QTextEdit test app.7z
          1 kB
          Freddy Herzog
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            f_herzog Freddy Herzog
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: