tests/auto/gui/text/qtexttable/tst_qtexttable.cpp
@@ -83,6 +83,8 @@ private slots:
     void columnWidthWithImage();
 #endif
 
+    void QTBUG138678_insertColumnAtStartWithRowspan();
+
 private:
     QTextTable *create2x2Table();
     QTextTable *create4x4Table();
@@ -1338,6 +1340,49 @@ void tst_QTextTable::columnWidthWithImage()
     QVERIFY(rightRect.left() > leftRect.right());
 }
 #endif
+
+void tst_QTextTable::QTBUG138678_insertColumnAtStartWithRowspan()
+{
+    QString s =
+"<html><body>"
+"<table border=1>"
+"<tr>"
+"    <td />"
+"    <td />"
+"    <td />"
+"    <td />"
+"    <td />"
+"</tr>"
+"<tr>"
+"    <td rowspan=2 />"
+"    <td rowspan=2 />"
+"    <td />"
+"    <td />"
+"    <td rowspan=2 />"
+"</tr>"
+"<tr>"
+"    <td />"
+"    <td />"
+"</tr>"
+"</table></body></html>)";
+
+    QTextDocument doc;
+    doc.setHtml(s);
+
+    QTextEdit textEdit;
+    textEdit.setDocument(&doc);
+    textEdit.show();
+    QVERIFY(QTest::qWaitForWindowExposed(&textEdit));
+
+    QTextCursor cursor(doc.firstBlock());
+    cursor.movePosition(QTextCursor::Right);
+
+    QTextTable *currentTable = cursor.currentTable();
+    QVERIFY(currentTable);
+
+    // Don't assert
+    currentTable->insertColumns(0, 1);
+}
 
 
 QTEST_MAIN(tst_QTextTable)
